--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ https://templatemo.com/tm-538-digital-trend
                     <div class="col-lg-12 col-12">
 
                         <h2 class="mb-5 text-center" data-aos="fade-up">
-                                        Keunggulan
+                                        Keunggulan & Kegiatan
                             <strong>Baitul Qur'an Wonogiri</strong>
                         </h2>
 
