--- a/project-detail.html
+++ b/project-detail.html
@@ -96,9 +96,7 @@ https://templatemo.com/tm-538-digital-trend
 
                       <h2>Ekstrakulikuler.</h2>
 
-                    
-
-                      <ul class="list-detail">
+                      <ul class="list-detail mt-3">
                         <li><span>Tilawah (MTQ)</span></li>
                         <li><span>Sapala</span></li>
                         <li><span>Beladiri</span></li>
