--- a/blog.html
+++ b/blog.html
@@ -91,7 +91,7 @@ https://templatemo.com/tm-538-digital-trend
                         <div class="blog-info">
                           <h4 class="blog-category text-danger">Syarat umum</h4>
 
-                          <h3><a href="blog-detail.html">• Lulus Kelas 6 SD/MI Sederajat.</a></h3>
+                          <h3>• Lulus Kelas 6 SD/MI Sederajat.</a></h3>
                         </div>
                       </div>
 
@@ -101,7 +101,7 @@ https://templatemo.com/tm-538-digital-trend
                         <div class="blog-info">
                           <h4 class="blog-category text-success">Syarat umum</h4>
 
-                          <h3><a href="blog-detail.html">• Hafal Juz 30/Juz Amma ( minimal 1 Juz ).
+                          <h3>• Hafal Juz 30/Juz Amma ( minimal 1 Juz ).
                           </a></h3>
                         </div>
                       </div>
@@ -112,7 +112,9 @@ https://templatemo.com/tm-538-digital-trend
                         <div class="blog-info">
                           <h4 class="blog-category text-primary">Syarat umum</h4>
 
-                          <h3><a href="blog-detail.html">• Mampu baca tulis Al-Quran dengan baik.</a></h3>
+                          <h3>• Mampu baca tulis Al-Quran dengan baik.</a></h3>
+
+                          <a href="blog-detail.html" class="custom-btn btn-bg btn mt-3 aos-init" data-aos="fade-up" data-aos-delay="100">Jalur Pendaftaran</a>
                         </div>
                       </div>
 
