--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ https://templatemo.com/tm-538-digital-trend
                          (Kuota 30 Santri Putra)
                          </h2>
 
-                        <a href="contact.html" class="custom-btn btn-bg btn mt-3 aos-init" data-aos="fade-up" data-aos-delay="100">Form Pendaftaran</a>
+                        <a href="http://localhost/belajar/formpendaftaran.php" class="custom-btn btn-bg btn mt-3 aos-init" data-aos="fade-up" data-aos-delay="100">Form Pendaftaran</a>
                       </p>
                     </div>
 
